--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 *vagrant
 compilador
 compilador.o
-compilador.tab.c
-compilador.tab.h
+*.tab.c
+*.tab.h
+*.o
+posfixo
 lex.yy.c
 *Vagrantfile
 *.output
+*.swp
