Symbol Table start

--- a/ProjetoBase/Makefile
+++ b/ProjetoBase/Makefile
@@ -12,5 +12,11 @@ y.tab.c: compilador.y compilador.h
 compilador.o : compilador.h compiladorF.c
 	gcc -c compiladorF.c -o compilador.o
 
+tabela_simbolos_test: tabela_simbolos_test.c tabela_simbolos.o tabela_simbolos.h
+	gcc tabela_simbolos.o tabela_simbolos_test.c -o tabela_simbolos_test
+
+tabela_simbolos.o: tabela_simbolos.c tabela_simbolos.h
+	gcc -c tabela_simbolos.c -o tabela_simbolos.o
+
 clean : 
-	rm -f compilador.tab.* lex.yy.c  *.o compilador compilador.output
+	rm -f compilador.tab.* lex.yy.c  *.o compilador compilador.output tabela_simbolos_test
