First use of symbol table

--- a/ProjetoBase/Makefile
+++ b/ProjetoBase/Makefile
@@ -1,13 +1,13 @@
 $DEPURA=1
 
-compilador: lex.yy.c y.tab.c compilador.o compilador.h
-	gcc lex.yy.c compilador.tab.c compilador.o -o compilador -ll -ly -lc
+compilador: lex.yy.c y.tab.c compilador.o compilador.h tabela_simbolos.c tabela_simbolos.h
+	gcc lex.yy.c compilador.tab.c compilador.o tabela_simbolos.c -o compilador -ll -ly -lc
 
-lex.yy.c: compilador.l compilador.h
+lex.yy.c: compilador.l compilador.h 
 	flex compilador.l
 
 y.tab.c: compilador.y compilador.h
-	bison compilador.y -d -v
+	bison compilador.y -d -v 
 
 compilador.o : compilador.h compiladorF.c
 	gcc -c compiladorF.c -o compilador.o
